# ogremeshy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-app.yml
CMake/: DependenciesConfig.cmake  DependenciesFunctions.cmake  Install.cmake  Macros.cmake  pmm.cmake
CMake/Templates/: Plugins.cfg.in
cmake/: DependenciesConfig.cmake  DependenciesFunctions.cmake
include/Core/: MovableText.h
src/Core/: AnimationPanel.cpp  MovableText.cpp  ShaderGeneratorTechniqueResolverListener.cpp  wxOgreMeshViewerMainFrameImpl.cpp
